--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
 
       - checkout
       - run: pip install -r requirements.txt
+      - run: git config --global init.defaultBranch circleci-project-setup
       - run: lektor build && lektor deploy
 
  
