--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
 
       - checkout
       - run: pip install -r requirements.txt
-      - run: git config --global init.defaultBranch circleci-project-setup
+      - run: git config --global init.defaultBranch maste
       - run: lektor build && lektor deploy
 
 
